force-app/main/default/objects/os_Listing__c/fields/os_Listing_Initials__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Initials__c</fullName>
    <label>Listing Initials</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>