force-app/main/default/objects/os_Listing__c/fields/os_Listing_Manager_Read_Write__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Manager_Read_Write__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listing Manager Read/Write</label>
    <type>Checkbox</type>
</CustomField>