force-app/main/default/objects/os_Listing__c/fields/os_Listing_Price_Expiry__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Price_Expiry__c</fullName>
    <label>Listing Price Expiry</label>
    <type>DateTime</type>
</CustomField>