force-app/main/default/objects/os_Listing__c/fields/os_Listing_Price_GBP__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Price_GBP__c</fullName>
    <label>Listing Price GBP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>