force-app/main/default/objects/os_Listing__c/fields/os_Listing_Price_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Price_pb__c</fullName>
    <label>Listing Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>