force-app/main/default/objects/os_Listing__c/fields/os_Listing_Price_Weekly__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Price_Weekly__c</fullName>
    <label>Listing Price ( Weekly)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>