force-app/main/default/objects/os_Listing__c/fields/os_Listing_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Sub_Status__c</fullName>
    <label>Listing Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>os_gsir_Listing_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pending AML</fullName>
            </value>
            <value>
                <fullName>Content Creation</fullName>
            </value>
            <value>
                <fullName>For Sale - Available</fullName>
            </value>
            <value>
                <fullName>For Sale - Unavailable</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>To Let - Available</fullName>
            </value>
            <value>
                <fullName>To Let - Unavailable</fullName>
            </value>
            <value>
                <fullName>Under Offer - Available</fullName>
            </value>
            <value>
                <fullName>Under Offer - Unavailable</fullName>
            </value>
            <value>
                <fullName>Arranging Tenancy - Unavailable</fullName>
            </value>
            <value>
                <fullName>Exchanged</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Off Market</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Tenancy Current - Unavailable</fullName>
            </value>
            <value>
                <fullName>Tenancy Current - Available</fullName>
            </value>
            <value>
                <fullName>Tenancy Finished</fullName>
            </value>
            <value>
                <fullName>Tenancy Cancelled</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Let</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>