force-app/main/default/objects/os_Listing__c/fields/os_Listing_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Sub_Type__c</fullName>
    <label>Listing Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>