force-app/main/default/objects/os_Listing__c/fields/os_Listing_type_initial__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_type_initial__c</fullName>
    <label>Listing type initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>