force-app/main/default/objects/os_Listing__c/fields/os_Listing_Verified_by_CC__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Verified_by_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listing Verified by CC</label>
    <type>Checkbox</type>
</CustomField>