force-app/main/default/objects/os_Listing__c/fields/os_Listing_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Verified_Date__c</fullName>
    <label>Listing Verified Date</label>
    <type>DateTime</type>
</CustomField>