force-app/main/default/objects/os_Listing__c/fields/os_Listing_Website__c.field-meta.xml
<CustomField>
    <fullName>os_Listing_Website__c</fullName>
    <label>Listing Website</label>
    <type>Url</type>
</CustomField>