force-app/main/default/objects/os_Listing__c/fields/os_Locality__c.field-meta.xml
<CustomField>
    <fullName>os_Locality__c</fullName>
    <label>Locality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Village</fullName>
            </value>
            <value>
                <fullName>Town/City</fullName>
            </value>
            <value>
                <fullName>Seaside/Seaview</fullName>
            </value>
            <value>
                <fullName>Riverside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>