force-app/main/default/objects/os_Listing__c/fields/os_Location_Match__c.field-meta.xml
<CustomField>
    <fullName>os_Location_Match__c</fullName>
    <label>Location Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>