force-app/main/default/objects/os_Listing__c/fields/os_Location_Source__c.field-meta.xml
<CustomField>
    <fullName>os_Location_Source__c</fullName>
    <label>Location Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Propertyfinder</fullName>
            </value>
            <value>
                <fullName>Byut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>