force-app/main/default/objects/os_Listing__c/fields/os_Locationtext_Dubizzle__c.field-meta.xml
<CustomField>
    <fullName>os_Locationtext_Dubizzle__c</fullName>
    <label>Locationtext - Dubizzle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>