force-app/main/default/objects/os_Listing__c/fields/os_Longitude__c.field-meta.xml
<CustomField>
    <fullName>os_Longitude__c</fullName>
    <label>Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>