force-app/main/default/objects/os_Listing__c/fields/os_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>os_Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>os_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cannot conduct viewings</fullName>
            </value>
            <value>
                <fullName>Client Cancelled</fullName>
            </value>
            <value>
                <fullName>Client not contacable</fullName>
            </value>
            <value>
                <fullName>Client Won&apos;t Lower Price</fullName>
            </value>
            <value>
                <fullName>Form A Expiry</fullName>
            </value>
            <value>
                <fullName>Sold by Competing Agency</fullName>
            </value>
            <value>
                <fullName>Compliance document Falsified</fullName>
            </value>
            <value>
                <fullName>Compliance: Signature Mismatch</fullName>
            </value>
            <value>
                <fullName>Rented by Competing Agency</fullName>
            </value>
            <value>
                <fullName>Rented by LSIR</fullName>
            </value>
            <value>
                <fullName>Sold by Direct Owner</fullName>
            </value>
            <value>
                <fullName>Rented by Direct Landlord</fullName>
            </value>
            <value>
                <fullName>Company Stock</fullName>
            </value>
            <value>
                <fullName>Sold by Developer</fullName>
            </value>
            <value>
                <fullName>Rented by Client</fullName>
            </value>
            <value>
                <fullName>Rented by Owner</fullName>
            </value>
            <value>
                <fullName>Duplicate Listing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>