force-app/main/default/objects/os_Listing__c/fields/os_Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>os_Lot_Size__c</fullName>
    <label>Lot Size</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>