force-app/main/default/objects/os_Listing__c/fields/os_LXT_ID__c.field-meta.xml
<CustomField>
    <fullName>os_LXT_ID__c</fullName>
    <label>LXT_ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>