force-app/main/default/objects/os_Listing__c/fields/os_LXT_LISTING_ID__c.field-meta.xml
<CustomField>
    <fullName>os_LXT_LISTING_ID__c</fullName>
    <label>LXT_LISTING_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>