force-app/main/default/objects/os_Listing__c/fields/os_LXT_Username_Email__c.field-meta.xml
<CustomField>
    <fullName>os_LXT_Username_Email__c</fullName>
    <label>LXT_Username_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>