force-app/main/default/objects/os_Listing__c/fields/os_Maintenance_Fees__c.field-meta.xml
<CustomField>
    <fullName>os_Maintenance_Fees__c</fullName>
    <label>Maintenance Fees</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>