force-app/main/default/objects/os_Listing__c/fields/os_Marketing_Exposure__c.field-meta.xml
<CustomField>
    <fullName>os_Marketing_Exposure__c</fullName>
    <label>Marketing Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Propertyfinder</fullName>
            </value>
            <value>
                <fullName>sothebysrealty.com</fullName>
            </value>
            <value>
                <fullName>No Marketing</fullName>
            </value>
            <value>
                <fullName>Global Portals</fullName>
            </value>
            <value>
                <fullName>ActivePipe</fullName>
            </value>
            <value>
                <fullName>sothebysrealty.ae</fullName>
            </value>
            <value>
                <fullName>LonRes</fullName>
            </value>
            <value>
                <fullName>Rightmove UK</fullName>
            </value>
            <value>
                <fullName>UK SIR Website</fullName>
            </value>
            <value>
                <fullName>Zoopla UK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>