force-app/main/default/objects/os_Listing__c/fields/os_Measurement__c.field-meta.xml
<CustomField>
    <fullName>os_Measurement__c</fullName>
    <label>Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Metric</fullName>
            </value>
            <value>
                <fullName>Non Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>