force-app/main/default/objects/os_Listing__c/fields/os_Monthly_Rent_per_sqm_sqft__c.field-meta.xml
<CustomField>
    <fullName>os_Monthly_Rent_per_sqm_sqft__c</fullName>
    <label>Monthly Rent per sqm/sqft</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>