force-app/main/default/objects/os_Listing__c/fields/os_MonthlyRent__c.field-meta.xml
<CustomField>
    <fullName>os_MonthlyRent__c</fullName>
    <label>Monthly Rent</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>