force-app/main/default/objects/os_Listing__c/fields/os_Mycrm_External_Id__c.field-meta.xml
<CustomField>
    <fullName>os_Mycrm_External_Id__c</fullName>
    <label>MyCrm External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>