force-app/main/default/objects/os_Listing__c/fields/os_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>os_Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <length>255</length>
    <type>Text</type>
</CustomField>