force-app/main/default/objects/os_Listing__c/fields/os_New_Construction__c.field-meta.xml
<CustomField>
    <fullName>os_New_Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Construction</label>
    <type>Checkbox</type>
</CustomField>