force-app/main/default/objects/os_Listing__c/fields/os_Not_On_Website__c.field-meta.xml
<CustomField>
    <fullName>os_Not_On_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Available On Website</label>
    <type>Checkbox</type>
</CustomField>