force-app/main/default/objects/os_Listing__c/fields/os_Number_external_Images__c.field-meta.xml
<CustomField>
    <fullName>os_Number_external_Images__c</fullName>
    <label>Number of external Images</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>