force-app/main/default/objects/os_Listing__c/fields/os_Number_Of_Floors__c.field-meta.xml
<CustomField>
    <fullName>os_Number_Of_Floors__c</fullName>
    <label>Number Of Floors</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>