force-app/main/default/objects/os_Listing__c/fields/os_off_Market__c.field-meta.xml
<CustomField>
    <fullName>os_off_Market__c</fullName>
    <label>Off Market</label>
    <type>Date</type>
</CustomField>