force-app/main/default/objects/os_Listing__c/fields/os_Off_Market_Date__c.field-meta.xml
<CustomField>
    <fullName>os_Off_Market_Date__c</fullName>
    <label>Off Market Date</label>
    <type>Date</type>
</CustomField>