force-app/main/default/objects/os_Listing__c/fields/os_Order_FloorPlans_Verified__c.field-meta.xml
<CustomField>
    <fullName>os_Order_FloorPlans_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Photos &amp; FloorPlans Verified</label>
    <type>Checkbox</type>
</CustomField>