force-app/main/default/objects/os_Listing__c/fields/os_Original_List_Price__c.field-meta.xml
<CustomField>
    <fullName>os_Original_List_Price__c</fullName>
    <label>Original List Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>