force-app/main/default/objects/os_Listing__c/fields/os_Original_Listing_Agent__c.field-meta.xml
<CustomField>
    <fullName>os_Original_Listing_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Listing Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OriginalListingAgent</relationshipName>
    <type>Lookup</type>
</CustomField>