force-app/main/default/objects/os_Listing__c/fields/os_Other_Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>os_Other_Documents_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Documents Uploaded</label>
    <type>Checkbox</type>
</CustomField>