force-app/main/default/objects/os_Listing__c/fields/os_Overall_Days_On_Market__c.field-meta.xml
<CustomField>
    <fullName>os_Overall_Days_On_Market__c</fullName>
    <formula>IF( NOT(ISBLANK( os_off_Market__c )),
os_off_Market__c -  os_On_Market_Date__c ,
Today() - os_On_Market_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Days On Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>