force-app/main/default/objects/os_Listing__c/fields/os_Override_Compliance_Verification__c.field-meta.xml
<CustomField>
    <fullName>os_Override_Compliance_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Compliance Verification</label>
    <type>Checkbox</type>
</CustomField>