force-app/main/default/objects/os_Listing__c/fields/os_Override_CRF_Rule__c.field-meta.xml
<CustomField>
    <fullName>os_Override_CRF_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override CRF Rule</label>
    <type>Checkbox</type>
</CustomField>