force-app/main/default/objects/os_Listing__c/fields/os_ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>os_ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>POA</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>