force-app/main/default/objects/os_Listing__c/fields/os_parking_Available__c.field-meta.xml
<CustomField>
    <fullName>os_parking_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parking Available</label>
    <type>Checkbox</type>
</CustomField>