force-app/main/default/objects/os_Listing__c/fields/os_parking_Spaces__c.field-meta.xml
<CustomField>
    <fullName>os_parking_Spaces__c</fullName>
    <label>Parking Spaces</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>