force-app/main/default/objects/os_Listing__c/fields/os_Parking_SpacesC__c.field-meta.xml
<CustomField>
    <fullName>os_Parking_SpacesC__c</fullName>
    <label>Parking Spaces (C)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>