force-app/main/default/objects/os_Listing__c/fields/os_Pending__c.field-meta.xml
<CustomField>
    <fullName>os_Pending__c</fullName>
    <label>Pending</label>
    <type>Date</type>
</CustomField>