force-app/main/default/objects/os_Listing__c/fields/os_Pet_Deposit__c.field-meta.xml
<CustomField>
    <fullName>os_Pet_Deposit__c</fullName>
    <label>Pet Deposit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>