force-app/main/default/objects/os_Listing__c/fields/os_PF_Listing_upgrade__c.field-meta.xml
<CustomField>
    <fullName>os_PF_Listing_upgrade__c</fullName>
    <label>PF - Listing upgrade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Featured</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>