force-app/main/default/objects/os_Listing__c/fields/os_PF_Listing_Upgrade_Expiry__c.field-meta.xml
<CustomField>
    <fullName>os_PF_Listing_Upgrade_Expiry__c</fullName>
    <label>PF Listing Upgrade Expiry</label>
    <type>DateTime</type>
</CustomField>