force-app/main/default/objects/os_Listing__c/fields/os_Photos_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>os_Photos_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photos Uploaded</label>
    <type>Checkbox</type>
</CustomField>