force-app/main/default/objects/os_Listing__c/fields/os_Photoshoot__c.field-meta.xml
<CustomField>
    <fullName>os_Photoshoot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photoshoot</label>
    <type>Checkbox</type>
</CustomField>