force-app/main/default/objects/os_Listing__c/fields/os_Picture_Count__c.field-meta.xml
<CustomField>
    <fullName>os_Picture_Count__c</fullName>
    <label>Picture Count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>