force-app/main/default/objects/os_Listing__c/fields/os_Pool__c.field-meta.xml
<CustomField>
    <fullName>os_Pool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>