force-app/main/default/objects/os_Listing__c/fields/os_Postal_Code_pb__c.field-meta.xml
<CustomField>
    <fullName>os_Postal_Code_pb__c</fullName>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>