force-app/main/default/objects/os_Listing__c/fields/os_Postcode__c.field-meta.xml
<CustomField>
    <fullName>os_Postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>