force-app/main/default/objects/os_Listing__c/fields/os_PP_Copy_EID_and_other_Docs__c.field-meta.xml
<CustomField>
    <fullName>os_PP_Copy_EID_and_other_Docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PP Copy/EID and other Docs</label>
    <type>Checkbox</type>
</CustomField>