force-app/main/default/objects/os_Listing__c/fields/os_Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Previous_Status__c</fullName>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>