force-app/main/default/objects/os_Listing__c/fields/os_Price_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>os_Price_Changed_At__c</fullName>
    <label>Price Changed At</label>
    <type>DateTime</type>
</CustomField>