force-app/main/default/objects/os_Listing__c/fields/os_Price_on_Request__c.field-meta.xml
<CustomField>
    <fullName>os_Price_on_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price on Request</label>
    <type>Checkbox</type>
</CustomField>