force-app/main/default/objects/os_Listing__c/fields/os_Price_Unit__c.field-meta.xml
<CustomField>
    <fullName>os_Price_Unit__c</fullName>
    <label>Price Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>sq_feet</fullName>
            </value>
            <value>
                <fullName>sq_yards</fullName>
            </value>
            <value>
                <fullName>sq_metres</fullName>
            </value>
            <value>
                <fullName>acres</fullName>
            </value>
            <value>
                <fullName>hectares</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>