force-app/main/default/objects/os_Listing__c/fields/os_PriceCheck_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>os_PriceCheck_Timestamp__c</fullName>
    <label>PriceCheck Timestamp</label>
    <type>DateTime</type>
</CustomField>