force-app/main/default/objects/os_Listing__c/fields/os_Project_Status__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Status__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Off Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>