force-app/main/default/objects/os_Listing__c/fields/os_Property_Finder_Title__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Finder_Title__c</fullName>
    <label>Property Finder Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>