force-app/main/default/objects/os_Listing__c/fields/os_Property_Lifestyle__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Lifestyle__c</fullName>
    <label>Property Lifestyle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metropolitan</fullName>
            </value>
            <value>
                <fullName>Community Living</fullName>
            </value>
            <value>
                <fullName>Waterfront</fullName>
            </value>
            <value>
                <fullName>Pet-friendly</fullName>
            </value>
            <value>
                <fullName>Outdoor Activities</fullName>
            </value>
            <value>
                <fullName>Beachclub</fullName>
            </value>
            <value>
                <fullName>Yachting</fullName>
            </value>
            <value>
                <fullName>Beach Access</fullName>
            </value>
            <value>
                <fullName>Private Living</fullName>
            </value>
            <value>
                <fullName>Resort</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>