force-app/main/default/objects/os_Listing__c/fields/os_Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PropertyOwner</relationshipName>
    <type>Lookup</type>
</CustomField>