force-app/main/default/objects/os_Listing__c/fields/os_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Bungalow</fullName>
            </value>
            <value>
                <fullName>Chalet</fullName>
            </value>
            <value>
                <fullName>Commercial Floor</fullName>
            </value>
            <value>
                <fullName>Compound</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Full floor</fullName>
            </value>
            <value>
                <fullName>Half floor</fullName>
            </value>
            <value>
                <fullName>Hotel Apartment</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Land Commercial</fullName>
            </value>
            <value>
                <fullName>Land Residential</fullName>
            </value>
            <value>
                <fullName>Loft Apartment</fullName>
            </value>
            <value>
                <fullName>Lot/Land</fullName>
            </value>
            <value>
                <fullName>Mansion</fullName>
            </value>
            <value>
                <fullName>Multiple Sale Units</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Office Space</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Whole Building</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>