force-app/main/default/objects/os_Listing__c/fields/os_Property_Valuation__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Valuation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Valuation</label>
    <referenceTo>os_Property_Valuation__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>Listings</relationshipName>
    <type>Lookup</type>
</CustomField>