force-app/main/default/objects/os_Listing__c/fields/os_Propertyfinder_Region__c.field-meta.xml
<CustomField>
    <fullName>os_Propertyfinder_Region__c</fullName>
    <label>Propertyfinder Region</label>
    <type>TextArea</type>
</CustomField>