force-app/main/default/objects/os_Listing__c/fields/os_Quality_Check_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>os_Quality_Check_Timestamp__c</fullName>
    <label>Quality Check Timestamp</label>
    <type>DateTime</type>
</CustomField>