force-app/main/default/objects/os_Listing__c/fields/os_Quarter_Bathrooms__c.field-meta.xml
<CustomField>
    <fullName>os_Quarter_Bathrooms__c</fullName>
    <label>Quarter Bathrooms</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>