force-app/main/default/objects/os_Listing__c/fields/os_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>os_Reference_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Reference Number</label>
    <type>AutoNumber</type>
</CustomField>