force-app/main/default/objects/os_Listing__c/fields/os_Resale_Promo__c.field-meta.xml
<CustomField>
    <fullName>os_Resale_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resale Promo</label>
    <type>Checkbox</type>
</CustomField>